[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "seacloud-sandbox"
version = "0.1.2"
description = "SeaCloudAI sandbox SDK for control-plane, build-plane, and runtime CMD APIs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "SeaCloudAI" }]
keywords = ["seacloudai", "sandbox", "sdk", "python", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/SeaCloudAI/sandbox-python"
Documentation = "https://github.com/SeaCloudAI/sandbox-python#readme"
Repository = "https://github.com/SeaCloudAI/sandbox-python"
Issues = "https://github.com/SeaCloudAI/sandbox-python/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sandbox*"]
